# NepTune

./: .gitignore  README.md  build.gradle.kts  firebase.json  pull_request_template.md  settings.gradle.kts
.github/workflows/: build-apk.yml  build.yml  ci.yml
StaffFeedback/: M1.md  M2.md  M3.md
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/android/sample/screen/: MainScreen.kt  MainScreenTest.kt
app/src/androidTest/java/com/neptune/neptune/: ExampleInstrumentedTest.kt  ImportPipelineTest.kt
app/src/androidTest/java/com/neptune/neptune/data/: ImagePickerLauncherTest.kt
app/src/androidTest/java/com/neptune/neptune/e2e/: LikeAndMessageE2ETest.kt  LogOutE2E.kt  ProfileFlowE2ETest.kt  SearchE2E.kt  SendMessageE2ETest.kt
app/src/androidTest/java/com/neptune/neptune/epic/: EpicProjectTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: soundtouch_config.h
app/src/main/cpp/soundtouch/: cpu_detect_stub.cpp  soundtouch_config.h
app/src/main/java/com/android/sample/: MainActivity.kt  Sample.kt
app/src/main/java/com/neptune/neptune/: MainActivity.kt  NepTuneApplication.kt  Sample.kt  SecondActivity.kt  SimpleData.kt
app/src/main/res/drawable/: audienceicon.xml  changeicon.xml  comments.xml  download.xml  file.xml  folder.xml  home_planet.xml  ic_avatar_placeholder.xml  list_music_selected.xml  list_projects_unselected.xml  messageicon.xml  music_note.xml  profile.xml  waveform.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/neptune/neptune/: ExampleRobolectricTest.kt  ExampleUnitTest.kt  MainActivityRecreateTest.kt  MainActivityRobolectricTest.kt  PointTest.kt
docs/: ImportStructure.md
firebase/firestore/: firestore.rules
firebase/firestore/test/: package.json
functions/: .eslintrc.js  package-lock.json  package.json
functions/src/: followUser.ts  generateSamplePreview.ts  index.ts  onMessageCreated.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+279 files in other folders)
